--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
 @font-face {
-    font-family: ' ';
-    src: url(
+    font-family: 'Random Wednesday';
+    src: url(https://github.com/19khuynh/19khuynh.github.io/blob/main/fonts/random_wednesday/Random%20Wednesday.ttf);
+    
