--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @font-face {
     font-family: 'Random Wednesday';
     src: url(https://github.com/19khuynh/19khuynh.github.io/blob/main/fonts/random_wednesday/Random%20Wednesday.ttf);
-    
+}
+
+h1 {
+    font-family: 'Random Wednesday';
+}
